<resources>
    <string name="app_name">BetterTogether</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="ppm_num"># Events:</string>
    <string name="reset">reset</string>
    <string name="pizza_beer"><![CDATA[Pizza & Beer:]]></string>
    <string name="cake">Cake:</string>
    <string name="claimable">Available:</string>
    <string name="last_ppm_event">Most recent:</string>
    <string name="claim_pizza">Claim pizza</string>
    <string name="claim_cake">Claim cake</string>
    <string name="yes">yes</string>
    <string name="add_user">Add user</string>
    <string name="add_pair">Add pair</string>
    <string name="reset_selection">Reset selection</string>
</resources>
