<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridView
        android:id="@+id/user_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_above="@+id/buttons"
        android:layout_below="@id/prev_event"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:numColumns="auto_fit"
        />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/create_pair_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/add_pair" />

        <Button
            android:id="@+id/reset_selection_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_selection" />

        <Button
            android:id="@+id/reset_pizza"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/claim_pizza" />

        <Button
            android:id="@+id/reset_cake"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/claim_cake" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/prev_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/last_ppm_event"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/last_event"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp" />

    </LinearLayout>


</RelativeLayout>
